--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promised-redis",
   "version": "0.9.0",
-  "description": "Q promise wrapper for Node Redis Client",
+  "description": "Promise wrapper for Node Redis Client",
   "main": "index.js",
   "directories": {
     "test": "test"
